Fix global horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   body,
   #root {
     min-height: 100%;
+    width: 100%;
+    overflow-x: hidden;
   }
 
   body {
